--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="all-buttons">
             <div class="button">
               <button>
-                <a href="Upcoming-match.html" target="_blank">Upcoming Match</a>
+                <a href="upcoming-match.html" target="_blank">Upcoming Match</a>
               </button>
               <button>
                 <a href="all-group.html" target="_blank">All Group</a>
