--- a/all-group.html
+++ b/all-group.html
@@ -46,7 +46,7 @@
                 <a href="all-group.html" target="_blank">All Group</a>
               </button>
               <button>
-                <a href="/index.html" target="_blank">Blog</a>
+                <a href="index.html" target="_blank">Blog</a>
               </button>
             </div>
           </div>
